# cpp-standard

./: README.md
src/: CMakeLists.txt  main.cpp
src/algorithms/mutating/: 25.6.6.fill.cpp
src/algorithms/nonmodifying/: 25.2.3.none_of.cpp  25.5.1.all_of.cpp  25.5.2.any_of.cpp  25.5.3.none_of.cpp  25.5.4.for_each.cpp  25.5.5.find.cpp  25.5.6.find_end.cpp
src/algorithms/numeric/: 25.10.3.accumulate.cpp  25.10.5.inner_product.cpp  25.10.5.partial_sum.cpp
src/algorithms/sorting/: 25.7.1.1.sort.cpp
